--- a/Language/Dom/htmlcss/practice/practice3.html
+++ b/Language/Dom/htmlcss/practice/practice3.html
@@ -1,3 +1,6 @@
+<!-- 책표지 따라서 만들어보기 -->
+<!-- 1.클래스 사용하지 않고 만들기  -->
+<!-- 2.Float을 사용하지 않기  -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -236,8 +239,8 @@
   </head>
   <!-- Float을 쓰지 않는다 -->
   <body>
-    <div class="container">
-      <div class="header">
+    <div id="container">
+      <div id="header">
         <div>
           <img class="img" src="./foot_warning.svg" alt="foot" />
         </div>
