--- a/Language/htmlcss/practice/practice6.html
+++ b/Language/htmlcss/practice/practice6.html
@@ -46,7 +46,7 @@
           <div class="color-white fs-55 fw-500 lh-70 mgt-8">자바스크립트</div>
           <div class="color-pink fs-80 fw-500 lh-70 mgt-50">avaScript</div>
           <ul class="mgt-30 color-white fs-10 padding-ul">
-            <li>자바스크립트의 왕도를 안내하는 최고의 교과서!</li>
+            <li>자바스크립트의 왕도 를 안내하는 최고의 교과서!</li>
             <li>따라 하기 쉬운 예제로 이론과 실무를 동시에 익힌다!</li>
             <li>
               자바스크립트를 처음 접하는 독자와 좌절한 경험이 있는 독자 모두를
@@ -58,21 +58,17 @@
 
       <div
         id="shadow"
-        class="background-color-book color-shadow pdl-30 mgt-10 fs-16 lh-09"
+        class="background-color-book color-shadow pdl-30 mgt-10 mgl-30 lh-09 text-align-justify"
       >
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-        itaque<br />
-        unde, voluptas quia eius sequi suscipit dolore eligendi neque ipsam<br />
-        assumenda quod quidem quae minus blanditiis, dicta tempore ullam<br />
-        molestias.lorem Lorem ipsum dolor sit amet consectetur adipisicing
-        elit.<br />
-        Id quam voluptatibus vero cum maiores at quasi, minus libero ut autem<br />
+        itaque unde, voluptas quia eius sequi suscipit dolore eligendi neque
+        ipsam assumenda quod quidem quae minus blanditiis, dicta tempore ullam
+        molestias.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Id quam voluptatibus vero cum maiores at quasi, minus libero ut autem
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-        itaque<br />
-        unde, voluptas quia eius sequi suscipit dolore eligendi neque ipsam<br />
-        assumenda quod quidem quae minus blanditiis, dicta tempore ullam<br />
-        molestias.lorem Lorem ipsum dolor sit amet consectetur adipisicing
-        elit.<br />
+        itaque unde, voluptas quia eius sequi suscipit dolore eligendi neque
+        ipsam assumenda quod quidem quae minus blanditiis, dicta tempore ullam
+        molestias.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit.
       </div>
 
       <div
